# keypoint-pose-estimation

./: README.md
gtsam/: .gitignore  CMakeLists.txt  gtsam-cmake.patch  package.xml
gtsam/gtsam-4.0.0/: CMakeLists.txt
gtsam/gtsam-4.0.0/gtsam/geometry/: Point2.h
gtsam/gtsam-4.0.0/gtsam_unstable/: CMakeLists.txt
gtsam/gtsam-4.0.0/gtsam_unstable/discrete/: CMakeLists.txt
object_pose_keypoint_optimizer/: CMakeLists.txt  package.xml
object_pose_keypoint_optimizer/include/object_pose_keypoint_optimizer/: StructureProjectionFactor.h  geometry.h  object_pose_keypoint_optimizer.h
object_pose_keypoint_optimizer/src/: StructureProjectionFactor.cpp  geometry.cpp  object_pose_keypoint_optimizer_node.cpp
rcta_object_pose_detection/: CMakeLists.txt  README.md  package.xml  setup.py
rcta_object_pose_detection/launch/: camera.launch  rcta_object_pose_detection.launch
rcta_object_pose_detection/src/: create_bounding_box.py  keypoint_detector.py  pose_optimizer.py  range_estimator.py
rcta_object_pose_detection/src/models/: __init__.py
rcta_perception_msgs/: CMakeLists.txt  package.xml
rcta_perception_msgs/msg/: Classification.msg  ObjectClass.msg
wm_od_interface_msgs/: CMakeLists.txt
