<?xml version="1.0"?>
<package>
  <name>gtsam</name>
  <version>3.1.0</version>
  <description>
    GTSAM is a library of C++ classes that implement smoothing and
    mapping (SAM) in robotics and vision, using factor graphs and Bayes
    networks as the underlying computing paradigm rather than sparse
    matrices. 
  </description>
  <maintainer email="ethan.a.stump2.civ@mail.mil">Ethan Stump</maintainer>
  <license>BSD</license>

  <url>https://borg.cc.gatech.edu/borg/download</url>
  <author>Frank Dellaert</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>catkin</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
