<?xml version="1.0"?>
<package>
  <name>rcta_object_pose_detection</name>
  <version>0.0.0</version>
  <description>The rcta_object_pose_detection package</description>

  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="karl@todo.todo">karl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>atlas</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>leveldb</build_depend>
  <build_depend>snappy</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>hdf5</build_depend>
  <build_depend>gflags</build_depend>
  <build_depend>google-glog</build_depend>
  <build_depend>lmdb</build_depend>
  <!-- using rcta_external_src repo instead
  <build_depend>openblas</build_depend>
  <build_depend>python-easydict</build_depend>
  <build_depend>python-skimage-pip</build_depend>
  <build_depend>python-protobuf-pip</build_depend>
  <build_depend>python-cython-pip</build_depend>
  <build_depend>python-yaml</build_depend>
  <build_depend>python-typing</build_depend>
  -->
  <build_depend>wm_od_interface_msgs</build_depend>
  <run_depend>cmake_modules</run_depend> 
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>wm_od_interface_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>py_faster_rcnn_ros</run_depend>
  <run_depend>pytorch</run_depend>
  <run_depend>cv_bridge</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
