<?xml version="1.0"?>
<package format="2">
  <name>rcta_perception_msgs</name>
  <version>0.0.0</version>
  <description>RCTA Perception Messages</description>

  <maintainer email="patelj1@gdls.com">Jaymit Patel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
